[metadata]
long_description = file:README.md
long_description_content_type = text/markdown


[tool:pytest]
addopts =
    --doctest-modules
    --color=yes
log_cli = 1
log_cli_level = CRITICAL
#log_cli_format = %(message)s
log_file = pytest.log
log_file_level = DEBUG
#log_file_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
#log_file_date_format=%Y-%m-%d %H:%M:%S
filterwarnings = ignore::FutureWarning


[yapf]
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true
COLUMN_LIMIT = 120
COALESCE_BRACKETS = true
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
DEDENT_CLOSING_BRACKETS = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = false


[isort]
known_first_party =
    gco
    pygco
    tests
line_length = 120
order_by_type = False
# 3 - Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = True
